--- a/app/src/main/res/layout/item_task_list.xml
+++ b/app/src/main/res/layout/item_task_list.xml
@@ -6,8 +6,8 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:paddingBottom="1dp"
-    android:paddingLeft="10dp"
-    android:paddingRight="10dp"
+    android:paddingLeft="6dp"
+    android:paddingRight="2dp"
     android:paddingTop="1dp">
 
     <LinearLayout
@@ -18,6 +18,7 @@
             android:id="@+id/RemainingDaysTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:paddingTop="4dp"
             android:textSize="8pt"
             android:textAlignment="center"
             tools:text="12"
@@ -29,7 +30,7 @@
             android:layout_height="wrap_content"
             android:textSize="8pt"
             android:textAlignment="center"
-            tools:text="nap"
+           android:text="nap"
             />
 
     </LinearLayout>
@@ -51,6 +52,7 @@
             android:layout_height="wrap_content"
             android:textAlignment="center"
             android:textAllCaps="true"
+            android:paddingTop="4dp"
             android:textSize="20sp"
             android:textStyle="bold"
             tools:text="MobWeb Házi" />
@@ -61,6 +63,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAlignment="center"
+            android:paddingTop="6dp"
             tools:text="2018.12.02" />
     </LinearLayout>
 
