--- a/app/src/main/res/layout/item_task_list.xml
+++ b/app/src/main/res/layout/item_task_list.xml
@@ -1,37 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:paddingBottom="1dp"
     android:paddingLeft="6dp"
+    android:paddingTop="1dp"
     android:paddingRight="2dp"
-    android:paddingTop="1dp">
+    android:paddingBottom="1dp">
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical">
+
         <TextView
             android:id="@+id/RemainingDaysTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingTop="4dp"
-            android:textSize="8pt"
             android:textAlignment="center"
-            tools:text="12"
-            />
+            android:textSize="8pt"
+            tools:text="12" />
 
         <TextView
             android:id="@+id/napTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="8pt"
+            android:text="nap"
             android:textAlignment="center"
-           android:text="nap"
-            />
+            android:textSize="8pt" />
 
     </LinearLayout>
 
@@ -43,16 +41,15 @@
         android:layout_marginRight="8dp"
         android:layout_weight="1"
         android:orientation="vertical"
-        android:textAlignment="center"
-        >
+        android:textAlignment="center">
 
         <TextView
             android:id="@+id/TaskTitleTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:paddingTop="4dp"
             android:textAlignment="center"
             android:textAllCaps="true"
-            android:paddingTop="4dp"
             android:textSize="20sp"
             android:textStyle="bold"
             tools:text="MobWeb Házi" />
@@ -62,8 +59,8 @@
             android:id="@+id/DueDateTextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAlignment="center"
             android:paddingTop="6dp"
+            android:textAlignment="center"
             tools:text="2018.12.02" />
     </LinearLayout>
 
