--- a/app/src/main/res/layout/dialog_new_task.xml
+++ b/app/src/main/res/layout/dialog_new_task.xml
@@ -68,6 +68,7 @@
         android:id="@+id/datePicker"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:firstDayOfWeek="monday"
         app:expandIconColor="@color/colorPrimary" />
 
 </LinearLayout>
