--- a/app/src/main/res/layout/dialog_detail_task.xml
+++ b/app/src/main/res/layout/dialog_detail_task.xml
@@ -33,11 +33,13 @@
         android:id="@+id/description_img"
         android:layout_width="wrap_content"
         android:layout_height="32dp"
+        android:layout_marginHorizontal="10dp"
         app:srcCompat="@drawable/description_icon" />
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="20dp">
 
         <com.ms.square.android.expandabletextview.ExpandableTextView
             xmlns:android="http://schemas.android.com/apk/res/android"
@@ -46,7 +48,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             expandableTextView:maxCollapsedLines="2"
-            expandableTextView:animDuration="200">
+            expandableTextView:animDuration="200"
+            >
 
             <TextView
                 android:id="@id/expandable_text"
@@ -69,22 +72,37 @@
         </com.ms.square.android.expandabletextview.ExpandableTextView>
     </ScrollView>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dip"
-        android:text="@string/dueDate"
-        android:textSize="18sp" />
-
-
-    <com.shrikanthravi.collapsiblecalendarview.widget.CollapsibleCalendar
-        android:id="@+id/datePicker"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:expandIconColor="@color/colorPrimary"
-        app:firstDayOfWeek="monday">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp">
 
-    </com.shrikanthravi.collapsiblecalendarview.widget.CollapsibleCalendar>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dip"
+            android:text="Do until:"
+            android:textSize="18sp" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center_horizontal">
+
+            <TextView
+
+                android:id="@+id/DueDateTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dip"
+                android:text="@string/dueDate"
+                android:textSize="18sp" />
+        </LinearLayout>
+
+    </LinearLayout>
 
 
 </LinearLayout>
