--- a/app/src/main/res/layout/dialog_detail_task.xml
+++ b/app/src/main/res/layout/dialog_detail_task.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="24dip">
+    android:padding="24dip"
+    android:fontFamily="sans-serif">
 
 
     <LinearLayout
@@ -60,7 +62,8 @@
                 android:layout_marginRight="5dp"
                 android:fontFamily="sans-serif-light"
                 android:textColor="#666666"
-                android:textSize="16sp" />
+                android:textSize="16sp"
+                />
 
             <ImageButton
                 android:id="@id/expand_collapse"
@@ -99,7 +102,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dip"
                 android:text="@string/dueDate"
-                android:textSize="18sp" />
+                android:textSize="18sp"
+
+                />
         </LinearLayout>
 
     </LinearLayout>
