--- a/app/src/main/res/layout/dialog_new_task.xml
+++ b/app/src/main/res/layout/dialog_new_task.xml
@@ -1,4 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<ScrollView android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -6,6 +11,7 @@
     android:orientation="vertical"
     android:padding="24dip"
     android:fontFamily="sans-serif">
+
 
 
     <com.rengwuxian.materialedittext.MaterialEditText
@@ -75,3 +81,5 @@
         app:expandIconColor="@color/colorPrimary" />
 
 </LinearLayout>
+
+    </ScrollView>
